# oxi-test

./: .gitignore  Cargo.toml  Gemfile  README.md  Rakefile  oxi-test.gemspec
.cargo/: config.toml
.github/workflows/: ci.yml  cross-gem.yml
ext/: Cargo.toml  build.rs  extconf.rb
ext/oxi/test/: OxiTest.java  OxiTestService.java
ext/src/: lib.rs
lib/oxi/: test.rb
lib/oxi/test/: jruby.rb  version.rb
test/: test_helper.rb
test/oxi/: test_test.rb
