[package]
name = "oxi-test"
version = "0.1.0"
edition = "2021"
authors = ["Ian Ker-Seymer <hello@ianks.com>"]
license = "MIT"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
rb-sys = { version = "0.9", features = [
  "bindgen-rbimpls",
  "bindgen-deprecated-types",
  "stable-api-compiled-fallback",
] }

[dev-dependencies]
rb-sys = { version = "0.9", features = [
  "link-ruby",
  "bindgen-rbimpls",
  "bindgen-deprecated-types",
  "stable-api-compiled-fallback",
] }

[build-dependencies]
rb-sys-env = { version = "0.1" }
