[package]
name = "oxi-test"
version = "0.1.0"
edition = "2021"
authors = ["Ian Ker-Seymer <hello@ianks.com>"]
license = "MIT"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
rb-sys = { version = "0.9", features = [
  "bindgen-rbimpls",
  "bindgen-deprecated-types",
  "stable-api-compiled-fallback",
], optional = true }
jni = { version = "*", optional = true }
robusta_jni = { version = "0.2.2", optional = true }

[build-dependencies]
rb-sys-env = { version = "0.1" }

[features]
mri = ["dep:rb-sys"]
mri_dev = ["mri", "rb-sys/link-ruby"]
jruby = ["dep:robusta_jni"]
jruby_dev = ["jruby", "jni/invocation"]
